--- a/assets/SASS/_partners.scss
+++ b/assets/SASS/_partners.scss
@@ -4,7 +4,7 @@
     background-repeat: no-repeat;
     background-position: center;
     width: 217px;
-    height: 152px;
+    height: 100%;
 }
 
 $cards: (
@@ -47,7 +47,6 @@ $cards_color: (
 @each $name, $path in $cards_color {
     .card_partner_#{$name} {
         background-color: #{$path};
-        width: 375px;
         height: 120px;
         display: flex;
         justify-content: center;
@@ -58,6 +57,11 @@ $cards_color: (
 .none {
     display: none;
 }
+
+.partners_box a { 
+    width: 100%;
+}
+
 
 @media (min-width: 768px) {
     .partners_box {
@@ -140,6 +144,4 @@ $cards_color: (
         margin-left: auto;
         margin-right: auto;
     }
-
-
 }
