--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -427,6 +427,13 @@ template {
   margin-top: -6px;
 }
 
+.service_active:hover .services {
+  color: #F0145A;
+}
+.service_active:hover .services::after {
+  background-image: url(../images/arrow_red.png);
+}
+
 .hero {
   font-weight: 700;
   font-size: 30px;
@@ -559,12 +566,6 @@ template {
     margin-bottom: 60px;
     padding-top: 0;
     padding-bottom: 0;
-  }
-  .services {
-    color: #F0145A;
-  }
-  .services::after {
-    background-image: url(../images/arrow_red.png);
   }
 }
 body {
