--- a/assets/SASS/_partners.scss
+++ b/assets/SASS/_partners.scss
@@ -95,6 +95,12 @@ $cards_color: (
         width: 25%;
     }
 
+    .partners_wrapper {
+        width: 1920px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
     .partners_box {
         padding-left: 100px;
         padding-right: 100px;
