--- a/assets/SASS/_team.scss
+++ b/assets/SASS/_team.scss
@@ -150,5 +150,11 @@
     .photo {
         width: 400px;
     }
+
+    .wrapper_team {
+        width: 1920px;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
     
