--- a/assets/SASS/to_tell.scss
+++ b/assets/SASS/to_tell.scss
@@ -159,6 +159,14 @@
     }
 }
 
+@media (min-width:1920px) {
+    .wrapper_tell {
+        width: 1920px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
 
 
 
