--- a/assets/CSS/to_tell.css
+++ b/assets/CSS/to_tell.css
@@ -146,5 +146,12 @@
     width: calc(33.33% - 15px);
   }
 }
+@media (min-width: 1920px) {
+  .wrapper_tell {
+    width: 1920px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 
 /*# sourceMappingURL=to_tell.css.map */
