--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -408,7 +408,6 @@ template {
   color: #24A3FF;
   padding-right: 14px;
   margin: 0;
-  margin-bottom: 10px;
   position: relative;
   text-decoration: none;
 }
@@ -425,6 +424,10 @@ template {
   right: 0;
   top: 48%;
   margin-top: -6px;
+}
+
+.service_active {
+  margin-bottom: 10px;
 }
 
 .service_active:hover .services {
@@ -853,7 +856,7 @@ body {
   display: none;
 }
 
-.services_team {
+.link_team {
   display: inline-block;
   font-weight: 700;
   font-size: 14px;
@@ -863,12 +866,11 @@ body {
   color: #24A3FF;
   padding-right: 14px;
   margin: 0;
-  margin-bottom: 5px;
   position: relative;
   text-decoration: none;
 }
 
-.services_team::after {
+.link_team::after {
   content: "";
   background-image: url(../images/arrow_blue.png);
   background-size: cover;
@@ -882,10 +884,14 @@ body {
   margin-top: -6px;
 }
 
-.service_team_active:hover .services_team {
+.link_team_active {
+  margin-bottom: 5px;
+}
+
+.link_team_active:hover .link_team {
   color: #F0145A;
 }
-.service_team_active:hover .services_team::after {
+.link_team_active:hover .link_team::after {
   background-image: url(../images/arrow_red.png);
 }
 
@@ -988,7 +994,7 @@ body {
   padding-top: 30px;
 }
 
-.publications {
+.tell_link {
   display: inline-block;
   font-weight: 700;
   font-size: 14px;
@@ -998,12 +1004,11 @@ body {
   color: #24A3FF;
   padding-right: 14px;
   margin: 0;
-  margin-bottom: 5px;
   position: relative;
   text-decoration: none;
 }
 
-.publications::after {
+.tell_link::after {
   content: "";
   background-image: url(../images/arrow_blue.png);
   background-size: cover;
@@ -1017,10 +1022,14 @@ body {
   margin-top: -6px;
 }
 
-.publications_active:hover .publications {
+.tell_link {
+  margin-bottom: 5px;
+}
+
+.tell_link_active:hover .tell_link {
   color: #F0145A;
 }
-.publications_active:hover .publications::after {
+.tell_link_active:hover .tell_link::after {
   background-image: url(../images/arrow_red.png);
 }
 
