--- a/assets/SASS/_better.scss
+++ b/assets/SASS/_better.scss
@@ -74,7 +74,6 @@ $icons: (
     color: #24A3FF;
     padding-right: 14px;
     margin: 0;
-    margin-bottom: 10px;
     position: relative;
     text-decoration: none;
 }
@@ -91,6 +90,10 @@ $icons: (
     right: 0;
     top: 48%;
     margin-top: -6px;
+}
+
+.service_active {
+    margin-bottom: 10px;
 }
 
 .service_active:hover {
